@@ -361,13 +361,23 @@ static void event_ffmpeg_newfile(struct context *cnt, int type ATTRIBUTE_UNUSED,
 	int width=cnt->imgs.width;
 	int height=cnt->imgs.height;
 	unsigned char *convbuf, *y, *u, *v;
-	int fps=0;
 	char stamp[PATH_MAX];
 	const char *mpegpath;
 
 	if (!cnt->conf.ffmpeg_cap_new && !cnt->conf.ffmpeg_cap_motion)
 		return;
-		
+
+	cnt->movie_last_shot = -1;
+	cnt->movie_fps = cnt->lastrate;
+
+	if (debug_level >= CAMERA_DEBUG) 
+		motion_log(LOG_DEBUG, 0, "%s FPS %d",__FUNCTION__,cnt->movie_fps);
+
+	if (cnt->movie_fps > 30)
+		cnt->movie_fps = 30;
+	if (cnt->movie_fps < 2)
+		cnt->movie_fps = 2;
+
 	/* conf.mpegpath would normally be defined but if someone deleted it by control interface
 	   it is better to revert to the default than fail */
 	if (cnt->conf.mpegpath)
@@ -395,18 +405,9 @@ static void event_ffmpeg_newfile(struct context *cnt, int type ATTRIBUTE_UNUSED,
 			u=img+width*height;
 			v=u+(width*height)/4;
 		}
-		fps=cnt->lastrate;
-
-		if (debug_level >= CAMERA_DEBUG) 
-			motion_log(LOG_DEBUG, 0, "%s FPS %d",__FUNCTION__,fps);
-
-		if (fps>30)
-			fps=30;
-		if (fps<2)
-			fps=2;
 		if ( (cnt->ffmpeg_new =
 		      ffmpeg_open((char *)cnt->conf.ffmpeg_video_codec, cnt->newfilename, y, u, v,
-		                  cnt->imgs.width, cnt->imgs.height, fps, cnt->conf.ffmpeg_bps,
+		                  cnt->imgs.width, cnt->imgs.height, cnt->movie_fps, cnt->conf.ffmpeg_bps,
 		                  cnt->conf.ffmpeg_vbr)) == NULL) {
 			motion_log(LOG_ERR, 1, "ffopen_open error creating (new) file [%s]",cnt->newfilename);
 			cnt->finish=1;
@@ -429,17 +430,9 @@ static void event_ffmpeg_newfile(struct context *cnt, int type ATTRIBUTE_UNUSED,
 			convbuf=NULL;
 		}
 
-		if (debug_level >= CAMERA_DEBUG) 
-			motion_log(LOG_DEBUG, 0, "%s FPS %d",__FUNCTION__,fps);
-
-		fps=cnt->lastrate;
-		if (fps>30)
-			fps=30;
-		if (fps<2)
-			fps=2;
 		if ( (cnt->ffmpeg_motion =
 		      ffmpeg_open((char *)cnt->conf.ffmpeg_video_codec, cnt->motionfilename, y, u, v,
-		                  cnt->imgs.width, cnt->imgs.height, fps, cnt->conf.ffmpeg_bps,
+		                  cnt->imgs.width, cnt->imgs.height, cnt->movie_fps, cnt->conf.ffmpeg_bps,
 		                  cnt->conf.ffmpeg_vbr)) == NULL){
 			motion_log(LOG_ERR, 1, "ffopen_open error creating (motion) file [%s]", cnt->motionfilename);
 			cnt->finish=1;
@@ -659,6 +652,10 @@ struct event_handlers event_handlers[] = {
 	event_ffmpeg_put
 	},
 	{
+	EVENT_FFMPEG_PUT,
+	event_ffmpeg_put
+	},
+	{
 	EVENT_ENDMOTION,
 	event_ffmpeg_closefile
 	},
@@ -702,7 +699,7 @@ void event(struct context *cnt, int type, unsigned char *image, char *filename, 
 	int i=-1;
 
 	while (event_handlers[++i].handler) {
-		if (type & event_handlers[i].type)
+		if (type == event_handlers[i].type)
 			event_handlers[i].handler(cnt, type, image, filename, eventdata, tm);
 	}
 }
