@@ -24,6 +24,7 @@ Features
    * Netcam Keepalive and HTTP/1.1 http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x01x22x231542 
     (Simon Walls)
    * Added mov , Quicktime file format (Andrew Hamilton).
+   * Insert Blanking frames http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x12x16x132522 (Dag Erlandsson)
 
 Bugfixes
    * Fixed a problem with locate and fixed mask overlay (Dag Erlandsson).
